[tool.poetry]
authors = ["Changyao Chen <changyao.chen@gmail.com>"]
description = "Simple library to calculate Rank-biased Overlap between two lists"
homepage = "https://github.com/changyaochen/rbo"
include = ["LICENSE"]
keywords = ["rbo"]
license = "MIT"
name = "rbo"
readme = "README.md"
repository = "https://github.com/changyaochen/rbo"
version = "0.1.3"

[tool.poetry.dependencies]
numpy = "^1.18"
python = "^3.7"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.8.4"
pylint = "^2.6.2"
pytest = "^6.2.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
